@@ -362,6 +362,8 @@ be placed in the \fBDOWN\fR state (except in the case of
 If the node state code is followed by "~", this indicates
 the node is presently in a power saving mode (typically
 running at reduced frequency).
+If the node state code is followed by "#", this indicates
+the node is presently being powered up or configured.
 .TP 12
 \fBALLOCATED\fR
 The node has been allocated to one or more jobs.
